# my-openenv

./: .gitignore  Dockerfile  LICENSE  README.md  actions.py  app.py  env.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
server/: app.py
tasks/: __init__.py  task_custom.py  task_easy.py  task_hard.py  task_medium.py
