[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-openenv"
version = "1.0.0"
description = "AI SRE incident response environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "gradio>=4.31.0",
    "openai>=1.30.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "main:run"
